# stellar

./: .gitignore  Cargo.toml
assets/: ship2.aseprite
src/: draw.rs  game.rs  init.rs  main.rs  update.rs
src/core/: mod.rs  navigation.rs  ship.rs
src/procedural_generation/: gen_planet.rs  gen_star.rs  gen_system.rs  mod.rs  planet.rs  star_properties.rs
src/stellar_core/: camera.rs  celestial_body.rs  mod.rs  navigation.rs  ship.rs
src/stellar_core/celestial_body/: orbit.rs  planet.rs  satellite.rs  star.rs
src/stellar_core/ship/: path.rs  thruster.rs
src/ui/: cam_mode_ui.rs  coords_ui.rs  fps_ui.rs  info_ui.rs  mod.rs
