# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[package]
name = "stellar"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] } 
image = "0.25.6"
noise = "0.9.0"
rand = "0.9.0"
winit = "0.30.9"
